<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="3dp"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/relativeLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transcriptome_size_label"
            android:layout_alignParentStart="true"
            style="?android:textAppearanceLarge"/>
        <ImageView
            android:id="@+id/input_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_more_vert_black_24dp"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:id="@+id/linearLayout">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_search_trans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/input_search_trans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_by_organism"
            android:inputType="textPersonName"
            android:completionThreshold="1"
            android:imeOptions="actionDone"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_custom_trans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_custom_trans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/custom_input"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"/>

    </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="@string/fold_change_label"
        style="?android:textAppearanceLarge"
        android:id="@+id/tvFold"
        android:layout_alignStart="@+id/relativeLayout"
        android:layout_below="@+id/linearLayout"/>

    <in.ganitlabs.rnator.Utils.SeekbarWithIntervals
        android:id="@+id/sbiFold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:text="@string/replicates_label"
        style="?android:textAppearanceLarge"
        android:layout_alignStart="@+id/relativeLayout"
        android:id="@+id/tvRep" />

    <in.ganitlabs.rnator.Utils.SeekbarWithIntervals
        android:id="@+id/sbiRep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRep"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:background="#0dbf66" />


</RelativeLayout>